test/syntaxerrors/TestMismatchedBrackets2.jdc
int i = 10;

if { i > 5 ) {
    System.out.println("yes");
}